# ImageFilteringApp

./: CMakeLists.txt  ConvolutionEditorWidget.cpp  FunctionEditorCanvas.cpp  FunctionEditorCanvas.h  FunctionalEditorDock.cpp  FunctionalEditorDock.h  README.md  filters.cpp  filters.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  sh  shape  shape.shp  style.qss
include/: ConvolutionEditorWidget.h  FunctionalEditorDock.h
scripts/: format.sh  lint.sh
src/: ConvolutionEditorWidget.cpp  ConvolutionEditorWidget.h  DitheringAndQuantization.cpp  DitheringAndQuantization.h  DitheringAndQuantizationWidget.cpp  DitheringAndQuantizationWidget.h  FunctionEditorCanvas.cpp  FunctionEditorCanvas.h  FunctionalEditorDock.cpp  FunctionalEditorDock.h  cubewidget.cpp  cubewidget.h  cylindermesh.h  cylinderwidget.cpp  cylinderwidget.h  ditheringandquantization.cpp  ditheringandquantization.h  drawingengine.cpp  drawingengine.h  drawingwidget.cpp  drawingwidget.h  filters.cpp  filters.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  shape.cpp  shape.h
